# dont-kill-santa

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c.yaml  cpp.yaml
c/: .gitignore  CMakeLists.txt  README.md  build_for_web.sh
c/include/: config.h  screens.h
c/src/: main.c
c/src/screens/: gameplay.c  instructions.c  title.c
c/tools/: build_for_web.sh
cpp/: .gitignore  CMakeLists.txt  README.md  build_for_web.sh
cpp/src/: Constants.hpp  main.cpp
cpp/src/audio/: AudioManager.cpp  AudioManager.hpp
cpp/src/scenes/: BaseScene.hpp  SceneManager.cpp  SceneManager.hpp  Scenes.hpp
cpp/src/scenes/GameScene/: GameScene.cpp  GameScene.hpp
cpp/src/scenes/InstructionsScene/: InstructionsScene.cpp  InstructionsScene.hpp
cpp/src/scenes/TitleScene/: TitleScene.cpp  TitleScene.hpp
cpp/tools/: build_for_web.sh
include/: screens.h
love2d/: README.md  assets.lua  globals.lua  main.lua
love2d/lib/: gamestateManager.lua
love2d/states/: game.lua  instructions.lua  title.lua
src/: main.c
src/screens/: gameplay.c  instructions.c  title.c
